--- a/app/src/main/res/drawable/medals.xml
+++ b/app/src/main/res/drawable/medals.xml
@@ -5,9 +5,9 @@
         <bitmap android:src="@drawable/medalouter" />
     </item>
     <!-- Inner circle -->
-    <item android:top="57dp" android:bottom="178dp" android:left="120dp" android:right="110dp">
+    <item android:id="@+id/innerCircle" android:top="57dp" android:bottom="178dp" android:left="120dp" android:right="110dp">
         <shape android:shape="oval">
-            <solid android:color="#FF0000" /> <!-- Change this to set the circle color -->
+            <solid android:color="#7cfc00" /> <!-- Change this to set the circle color -->
         </shape>
     </item>
 </layer-list>
