--- a/app/src/main/res/layout/item_lead_species.xml
+++ b/app/src/main/res/layout/item_lead_species.xml
@@ -28,7 +28,7 @@
                 android:textSize="23sp" />
 
             <TextView
-                android:id="@+id/leadUserAchie"
+                android:id="@+id/leadUserClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
