--- a/app/src/main/res/layout/activity_new_sight_page.xml
+++ b/app/src/main/res/layout/activity_new_sight_page.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <TextView
                 android:id="@+id/HotspotDetsHtxt"
                 android:layout_width="wrap_content"
@@ -68,7 +69,7 @@
                     android:layout_marginLeft="15dp"
                     android:backgroundTint="#00FFFFFF"
                     android:ems="10"
-                    android:fontFamily="@font/alfa_slab_one"
+                    android:fontFamily="@font/architects_daughter"
                     android:inputType="textPersonName"
                     android:textColor="#000000"
                     android:textSize="16dp"
@@ -103,7 +104,7 @@
                     android:layout_marginLeft="15dp"
                     android:backgroundTint="#00FFFFFF"
                     android:ems="10"
-                    android:fontFamily="@font/alfa_slab_one"
+                    android:fontFamily="@font/architects_daughter"
                     android:inputType="textPersonName"
                     android:textColor="#000000"
                     android:textSize="16dp"
@@ -138,7 +139,7 @@
                     android:layout_marginLeft="15dp"
                     android:backgroundTint="#00FFFFFF"
                     android:ems="10"
-                    android:fontFamily="@font/alfa_slab_one"
+                    android:fontFamily="@font/architects_daughter"
                     android:inputType="textPersonName"
                     android:textColor="#000000"
                     android:textSize="16dp"
@@ -177,12 +178,43 @@
                         android:layout_marginLeft="15dp"
                         android:backgroundTint="#00FFFFFF"
                         android:ems="10"
-                        android:fontFamily="@font/alfa_slab_one"
+                        android:fontFamily="@font/architects_daughter"
                         android:inputType="textPersonName"
                         android:textColor="#000000"
                         android:textSize="16dp"
                         android:textStyle="italic" />
                 </ScrollView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/CurrentLay"
+                android:layout_width="360dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/NotesLay"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edit_text_border"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/CurrentHtxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:ems="10"
+                    android:fontFamily="@font/alfa_slab_one"
+                    android:text="Is this Sighting at Current Location?"
+                    android:textColor="#000000"
+                    android:textSize="16dp" />
+
+                <CheckBox
+                    android:id="@+id/YesCurrentcheckBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/architects_daughter"
+                    android:text="Yes"
+                    android:textColor="#000000" />
 
             </LinearLayout>
 
