Final part Small changes

--- a/app/src/main/res/layout/activity_main_page_frame.xml
+++ b/app/src/main/res/layout/activity_main_page_frame.xml
@@ -71,14 +71,14 @@
     <!-- Navigation drawer view -->
     <RelativeLayout
         android:id="@+id/navigation_drawer"
-        android:layout_width="240dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#FFFDF1E0">
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigation_view"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:menu="@menu/navigation_drawer_menu" />
