--- a/app/src/main/res/layout/fragment_profand_set.xml
+++ b/app/src/main/res/layout/fragment_profand_set.xml
@@ -26,25 +26,57 @@ tools:context=".ProfandSetFragment">
         android:textColor="#000000"
         android:textSize="48sp" />
 
-    <TextView
-        android:id="@+id/Usernametxt"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/alfa_slab_one"
-        android:text="      Username: "
-        android:textColor="#000000"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/Emailtxt"
+        <TextView
+            android:id="@+id/usernametxt"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="      Username: "
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/Usernametxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="7dp"
+            android:fontFamily="@font/architects_daughter"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/alfa_slab_one"
-        android:text="      Email: "
-        android:textColor="#000000"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/emailtxt"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="      Email: "
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/Emailtxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="7dp"
+            android:fontFamily="@font/architects_daughter"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/Unitstxt"
