--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/nav_ComandAchie"
         android:title="@string/menu_ComandAchie"
-        android:icon="@drawable/medalicon" />
+        android:icon="@drawable/medalouter" />
     <item
         android:id="@+id/nav_Journal"
         android:title="@string/menu_Journal"
