--- a/app/src/main/res/layout/activity_main_page_frame.xml
+++ b/app/src/main/res/layout/activity_main_page_frame.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
+            android:backgroundTint="@color/purple_200"
             android:src="@drawable/ic_menu" />
 
     </RelativeLayout>
