--- a/app/src/main/res/layout/fragment_comand_achie.xml
+++ b/app/src/main/res/layout/fragment_comand_achie.xml
@@ -103,7 +103,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/linlayLeaderboard"
@@ -112,7 +112,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/confetti_png"
+                android:background="@drawable/lead_background"
                 android:orientation="vertical">
 
                 <TextView
