--- a/app/src/main/res/layout/activity_main_page_frame.xml
+++ b/app/src/main/res/layout/activity_main_page_frame.xml
@@ -55,7 +55,7 @@
 
     <!-- Content -->
     <ScrollView
-        android:id="@+id/scroll_view"
+        android:id="@+id/myScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottomNavigation"
